# asparit

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/core/: collector.rs  consumer.rs  drain.rs  driver.rs  executor.rs  extend.rs  folder.rs  from_iter.rs  into_iter.rs  iterator.rs  mod.rs  producer.rs  reducer.rs  setup.rs
src/executor/: misc.rs  mod.rs  rayon.rs  sequential.rs  simple.rs  tokio.rs
src/inner/: chain.rs  cloned.rs  collect.rs  copied.rs  count.rs  filter.rs  filter_map.rs  find.rs  flatten.rs  fold.rs  for_each.rs  inspect.rs  map.rs  map_init.rs  map_with.rs  max.rs  min.rs  mod.rs  noop.rs  product.rs  reduce.rs  sum.rs  try_fold.rs  try_for_each.rs  try_reduce.rs  update.rs  while_some.rs
src/iter/: chain.rs  chunks.rs  cloned.rs  cmp.rs  collect.rs  copied.rs  enumerate.rs  filter.rs  filter_map.rs  find.rs  flatten.rs  fold.rs  for_each.rs  inspect.rs  interleave.rs  intersperse.rs  map.rs  map_init.rs  map_with.rs  max.rs  min.rs  mod.rs  noop.rs  panic_fuse.rs  partition.rs  position.rs  product.rs  reduce.rs  rev.rs  setup.rs  skip.rs  splits.rs  step_by.rs  sum.rs  take.rs  try_fold.rs  try_for_each.rs  try_reduce.rs  unzip.rs  update.rs  (+2 more)
src/misc/: mod.rs  try_.rs
src/std/: binary_heap.rs  hash_set.rs  mod.rs  range.rs  slice.rs  vec.rs
