[package]
name = "asparit"
version = "0.1.0"
authors = [ "Bergmann89 <info@bergmann89.de>" ]
description = "Async Parallel Iterators for Rust"
edition = "2018"
license = "Apache-2.0/MIT"
repository = "https://github.com/Bergmann89/asparit"
documentation = "https://docs.rs/rayon/"
readme = "README.md"
keywords = [ "parallel", "thread", "concurrency", "join", "performance" ]
categories = [ "concurrency" ]

[features]
default = [ "sequential-executor" ]
default-executor = [ ]
rayon-executor = [ "rayon-core", "default-executor" ]
sequential-executor = [ "default-executor" ]
tokio-executor = [ "futures", "num_cpus", "tokio", "default-executor" ]

[dependencies]
futures = { version = "0.3", optional = true }
num_cpus = { version = "1.13", optional = true }
rayon-core = { version = "1.9", optional = true }
tokio = { version = "0.3", features = [ "macros", "rt-multi-thread" ], optional = true }
